# ingress

./: .gitignore  Cargo.toml
src/: main.rs
src/handlers/: hello_world.rs  mod.rs  proxy.rs
src/handlers/ingress/: mod.rs  update_ingressyml.rs
src/workers/: mod.rs  update_nginx_confs.rs
testing/: ingress.yml  proxy.py
