[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
hyper = { version = "0.14.23", features = ["full"] }
mini-redis = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full", "tracing"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.3.5", features = ["trace", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
